Setup grid system. Configure sass variables.

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,26 @@
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
-      <h1>Front-end Trial</h1>
+      <div class="container">
+        <h1 class="text-primary">Front-end Trial</h1>
+        <a href="http://">Link</a>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="border">Column</div>
+          </div>
+          <div class="col-lg-3">
+            <div class="border">Column</div>
+          </div>
+          <div class="col-lg-3">
+            <div class="border">Column</div>
+          </div>
+          <div class="col-lg-3">
+            <div class="border">Column</div>
+          </div>
+        </div>
+      </div>
       <!-- Bootstrap JS -->
       <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
       <!-- AOS -->
