Improvements to primary navigation

--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
     </head>
     <body>
       <nav class="custom-navbar navbar-expand-xl navbar-dark">
-        <div class="container">
-          <div class="d-flex flex-wrap align-items-center justify-content-between">
+        <div style="border-bottom: 1px solid #707070;" class="container">
+          <div class="custom-navbar__container">
             
             <!-- Social -->
             <div class="custom-navbar__social-wrapper d-none d-xl-block">
